Display answer on ball

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,10 @@
 name: surf_practice_magic_ball
 description: A new Flutter project.
-
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: 3.0.3 # Dart SDK version
+  sdk: ^3.0.3 # Dart SDK version
   flutter: 3.10.3 # Flutter SDK version
 
 dependencies:
@@ -14,12 +12,24 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.1
-flutter:
 
+
+flutter:
   uses-material-design: true
+  assets:
+    - images/
+    - images/start/
+
+  fonts:
+    - family: GillSans
+      fonts:
+        - asset: fonts/ofont.ru_Gill Sans.ttf
+          weight: 400
